updates prepared statements as func

--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -9,11 +9,14 @@
    "source": [
     "# Lab Requirements and Setup\n",
     "\n",
-    "This lab consists of several Jupyter notebooks. Each notebook consists of one or more notebook cells. There are specific requirements for running the notebook cells. Follow the instructions for requirements and setup.\n",
+    "This lab consists of several Jupyter notebooks and runs in Gitpod using VS Code.  Follow the instructions for requirements and setup.\n",
+    "\n",
+    "## About Jupyter notebooks\n",
+    "A notebook consists of one or more cells. There are two types of cells: markdown and code. This is a markdown cell. You execute (run)a code cell by simply select the play icon in the cell's left gutter. In VS Code, notebooks cells are editable. For code cells, you can modify the code for execution. Certain labs contain challenges that require you to do just that!\n",
     "\n",
     "### Requirements\n",
     "Here are the requirements for this lab:\n",
-    "- Run in a gitpod workspace\n",
+    "- Launch from the gitpod workspace\n",
     "- yb-ctl has a three node cluster up and running, however Gitpod does not support all loopback addresses, so only 127.0.0.1 has available web user interfaces (gp ports list in the terminal)"
    ]
   },
@@ -73,18 +76,38 @@
     "\n",
     "The following Python cell creates and stores variables that all the notebooks will use. You can view these variables in the Jupyter tab.\n",
     "\n",
-    "- To run the script, select Execute Cell (Play Arrow in the cell side bar).\n",
+    "- To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell.\n",
     "- Verify the accuracy of the output values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'MY_DB_NAME' (str)\n",
+      "Stored 'MY_YB_PATH' (str)\n",
+      "Stored 'MY_HOST_IPv4_01' (str)\n",
+      "Stored 'MY_HOST_IPv4_02' (str)\n",
+      "Stored 'MY_HOST_IPv4_03' (str)\n",
+      "Stored 'MY_NOTEBOOK_DIR' (str)\n",
+      "Stored 'MY_TSERVER_WEBSERVER_PORT' (str)\n",
+      "Stored 'MY_NOTEBOOK_DATA_FOLDER' (str)\n",
+      "Stored 'MY_NOTEBOOK_UTILS_FOLDER' (str)\n",
+      "Stored 'MY_DATA_DDL_FILE' (str)\n",
+      "Stored 'MY_DATA_DML_FILE' (str)\n",
+      "Stored 'MY_UTIL_FUNCTIONS_FILE' (str)\n",
+      "Stored 'MY_UTIL_YBTSERVER_METRICS_FILE' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
@@ -95,9 +118,13 @@
     "    key, value = var.split('=')\n",
     "    os.environ[key] = value\n",
     " \n",
+    "\n",
+    "# Comment out Local\n",
+    "MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
+    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
-    "MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
     "MY_HOST_IPv4_01=os.environ.get('MY_HOST_IPv4_01')\n",
     "MY_HOST_IPv4_02=os.environ.get('MY_HOST_IPv4_02')\n",
     "MY_HOST_IPv4_03=os.environ.get('MY_HOST_IPv4_03')\n",
@@ -143,13 +170,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                   List of databases\n",
+      "      Name       |  Owner   | Encoding | Collate |    Ctype    |   Access privileges   \n",
+      "-----------------+----------+----------+---------+-------------+-----------------------\n",
+      " db_ybu          | yugabyte | UTF8     | C       | en_US.UTF-8 | \n",
+      " postgres        | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      " system_platform | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      " template0       | postgres | UTF8     | C       | en_US.UTF-8 | =c/postgres          +\n",
+      "                 |          |          |         |             | postgres=CTc/postgres\n",
+      " template1       | postgres | UTF8     | C       | en_US.UTF-8 | =c/postgres          +\n",
+      "                 |          |          |         |             | postgres=CTc/postgres\n",
+      " yugabyte        | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      "(6 rows)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:  database \"db_ybu\" is being accessed by other users\n",
+      "DETAIL:  There are 5 other sessions using the database.\n",
+      "ERROR:  database \"db_ybu\" already exists\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # create database\n",
     "YB_PATH=${1}\n",
@@ -190,13 +246,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                      List of functions\n",
+      " Schema |                        Name                        |                                              Result data type                                               |                           Argument data types                            | Type \n",
+      "--------+----------------------------------------------------+-------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------+------\n",
+      " public | connectby                                          | SETOF record                                                                                                | text, text, text, text, integer                                          | func\n",
+      " public | connectby                                          | SETOF record                                                                                                | text, text, text, text, integer, text                                    | func\n",
+      " public | connectby                                          | SETOF record                                                                                                | text, text, text, text, text, integer                                    | func\n",
+      " public | connectby                                          | SETOF record                                                                                                | text, text, text, text, text, integer, text                              | func\n",
+      " public | crosstab                                           | SETOF record                                                                                                | text                                                                     | func\n",
+      " public | crosstab                                           | SETOF record                                                                                                | text, integer                                                            | func\n",
+      " public | crosstab                                           | SETOF record                                                                                                | text, text                                                               | func\n",
+      " public | crosstab2                                          | SETOF tablefunc_crosstab_2                                                                                  | text                                                                     | func\n",
+      " public | crosstab3                                          | SETOF tablefunc_crosstab_3                                                                                  | text                                                                     | func\n",
+      " public | crosstab4                                          | SETOF tablefunc_crosstab_4                                                                                  | text                                                                     | func\n",
+      " public | fn_convert_partition_hex_range                     | text                                                                                                        | p_partition text                                                         | func\n",
+      " public | fn_find_hash_code_in_partition_hex_range           | text                                                                                                        | p_hash_code integer, p_partition text                                    | func\n",
+      " public | fn_hex_to_int                                      | integer                                                                                                     | hexval text                                                              | func\n",
+      " public | fn_random_int_from_array                           | integer                                                                                                     | id integer DEFAULT 1                                                     | func\n",
+      " public | fn_random_name                                     | text                                                                                                        | isfirstname integer DEFAULT 0, islastname integer DEFAULT 0              | func\n",
+      " public | fn_test                                            | timestamp with time zone                                                                                    |                                                                          | func\n",
+      " public | fn_yb_create_stmts                                 | timestamp with time zone                                                                                    |                                                                          | func\n",
+      " public | fn_yb_tserver_metrics_snap                         | timestamp with time zone                                                                                    | snaps_to_keep integer DEFAULT 1, yb_tserver_webport integer DEFAULT 8200 | func\n",
+      " public | fn_yb_tserver_metrics_snap_and_show_tablet_load_ct | TABLE(row_name text, rocksdb_number_db_seek numeric, rocksdb_number_db_next numeric, rows_inserted numeric) | islocal integer DEFAULT 0                                                | func\n",
+      " public | fn_yb_tserver_metrics_snap_table                   | TABLE(row_name text, rocksdb_number_db_seek numeric, rocksdb_number_db_next numeric, rows_inserted numeric) | islocal integer DEFAULT 0                                                | func\n",
+      " public | normal_rand                                        | SETOF double precision                                                                                      | integer, double precision, double precision                              | func\n",
+      "(21 rows)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_UTILS_FOLDER\" \"$MY_UTIL_FUNCTIONS_FILE\"  # util functions\n",
     "YB_PATH=${1}\n",
@@ -211,7 +300,7 @@
     "cd $YB_PATH\n",
     "\n",
     "# Functions file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_FUNCTIONS_FILE_PATH} \n",
+    "./bin/ysqlsh -q -d ${DB_NAME} -f ${UTIL_FUNCTIONS_FILE_PATH} \n",
     "sleep 1;\n",
     "\n",
     "# Describe functions\n",
@@ -230,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -241,19 +330,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE EXTENSION\n",
-      "DROP TABLE\n",
-      "CREATE TABLE\n",
-      "DROP FUNCTION\n",
-      "CREATE FUNCTION\n",
-      "CREATE VIEW\n",
-      "CREATE VIEW\n",
-      "CREATE VIEW\n",
-      "CREATE VIEW\n",
-      "CREATE VIEW\n",
-      "CREATE VIEW\n",
-      "DROP FUNCTION\n",
-      "CREATE FUNCTION\n",
       "                               List of relations\n",
       " Schema |                        Name                        | Type  |  Owner   \n",
       "--------+----------------------------------------------------+-------+----------\n",
@@ -261,28 +337,19 @@
       " public | tbl_countries                                      | table | yugabyte\n",
       " public | tbl_no_pk                                          | table | yugabyte\n",
       " public | tbl_states                                         | table | yugabyte\n",
+      " public | tbl_test                                           | table | yugabyte\n",
       " public | tbl_yb_tserver_metrics_snapshots                   | table | yugabyte\n",
+      " public | test                                               | table | yugabyte\n",
+      " public | test3                                              | table | yugabyte\n",
+      " public | testb                                              | table | yugabyte\n",
       " public | vw_yb_tserver_metrics_last                         | view  | yugabyte\n",
       " public | vw_yb_tserver_metrics_report                       | view  | yugabyte\n",
       " public | vw_yb_tserver_metrics_snap_and_show_tablet_load    | view  | yugabyte\n",
       " public | vw_yb_tserver_metrics_snap_and_show_tablet_load_ct | view  | yugabyte\n",
       " public | vw_yb_tserver_metrics_snapshot_tablets             | view  | yugabyte\n",
       " public | vw_yb_tserver_metrics_snapshot_tablets_metrics     | view  | yugabyte\n",
-      "(11 rows)\n",
+      "(15 rows)\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ysqlsh:/Users/seth/Documents/GitHub/ybu/101_CodeSnippets/Module_Anatomy_of_an_index/utils/util_ybtserver_metrics.sql:3: NOTICE:  extension \"tablefunc\" already exists, skipping\n",
-      "ysqlsh:/Users/seth/Documents/GitHub/ybu/101_CodeSnippets/Module_Anatomy_of_an_index/utils/util_ybtserver_metrics.sql:6: NOTICE:  drop cascades to 5 other objects\n",
-      "DETAIL:  drop cascades to view vw_yb_tserver_metrics_last\n",
-      "drop cascades to view vw_yb_tserver_metrics_report\n",
-      "drop cascades to view vw_yb_tserver_metrics_snap_and_show_tablet_load\n",
-      "drop cascades to view vw_yb_tserver_metrics_snapshot_tablets\n",
-      "drop cascades to view vw_yb_tserver_metrics_snapshot_tablets_metrics\n"
      ]
     }
    ],
@@ -300,8 +367,7 @@
     "cd $YB_PATH\n",
     "\n",
     "# Metrics file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE} \n",
-    "sleep 1;\n",
+    "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE} >&/dev/null\n",
     "\n",
     "# Describe relations\n",
     "./bin/ysqlsh -d ${DB_NAME} -c \"\\d\""
@@ -333,13 +399,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               List of relations\n",
+      " Schema |                        Name                        | Type  |  Owner   \n",
+      "--------+----------------------------------------------------+-------+----------\n",
+      " public | tbl_cities                                         | table | yugabyte\n",
+      " public | tbl_countries                                      | table | yugabyte\n",
+      " public | tbl_no_pk                                          | table | yugabyte\n",
+      " public | tbl_states                                         | table | yugabyte\n",
+      " public | tbl_test                                           | table | yugabyte\n",
+      " public | tbl_yb_tserver_metrics_snapshots                   | table | yugabyte\n",
+      " public | test                                               | table | yugabyte\n",
+      " public | test3                                              | table | yugabyte\n",
+      " public | testb                                              | table | yugabyte\n",
+      " public | vw_yb_tserver_metrics_last                         | view  | yugabyte\n",
+      " public | vw_yb_tserver_metrics_report                       | view  | yugabyte\n",
+      " public | vw_yb_tserver_metrics_snap_and_show_tablet_load    | view  | yugabyte\n",
+      " public | vw_yb_tserver_metrics_snap_and_show_tablet_load_ct | view  | yugabyte\n",
+      " public | vw_yb_tserver_metrics_snapshot_tablets             | view  | yugabyte\n",
+      " public | vw_yb_tserver_metrics_snapshot_tablets_metrics     | view  | yugabyte\n",
+      "(15 rows)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_DATA_DDL_FILE\" \"$MY_DATA_DML_FILE\"   # World Cities\n",
     "YB_PATH=${1}\n",
@@ -356,11 +449,11 @@
     "cd $YB_PATH\n",
     "\n",
     "# DDL file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${WORLD_DDL_PATH} \n",
+    "./bin/ysqlsh -d ${DB_NAME} -f ${WORLD_DDL_PATH} >&/dev/null\n",
     "sleep 1;\n",
     "\n",
     "# DML file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${WORLD_DML_PATH} \n",
+    "./bin/ysqlsh -d ${DB_NAME} -f ${WORLD_DML_PATH} >&/dev/null\n",
     "sleep 1;\n",
     "\n",
     "# Describe relations\n",
@@ -376,8 +469,8 @@
    "source": [
     "##### View DDL for tbl_countries\n",
     "\n",
-    "- Require bash, as the magic sql cell won't do it\n",
-    "- Need to run \\d command"
+    "- Requires bash and ysqlsh\n",
+    "- SQL magic does not support the PostgreSQL commands"
    ]
   },
   {
@@ -412,7 +505,7 @@
    "source": [
     "## Connect to YugabyteDB using the PostgreSQL Driver for Python\n",
     "The following cell requires:\n",
-    "- Python 3.7.9 and psycopg2\n"
+    "- Python 3.8+ and psycopg2\n"
    ]
   },
   {
@@ -527,7 +620,23 @@
     "  - Created the `db_ybu` database with `ysqlsh`\n",
     "  - Created utils\n",
     "  - Created tables and loaded data using DDL and DML scripts\n",
-    "  - Connected to the database using a PostgreSQL driver for Python\n"
+    "  - Connected to the database using a PostgreSQL driver for Python\n",
+    "\n",
+    "Next, open `02_Tables_Tablets_and_Sharding.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "gp open 02_Tables_Tablets_and_Sharding.ipynb"
    ]
   }
  ],
