--- a/02_Tables_Tablets_and_Sharding.ipynb
+++ b/02_Tables_Tablets_and_Sharding.ipynb
@@ -7,11 +7,11 @@
     "# Demystifying table sharding, tablets, and data distribution\n",
     "As a distributed SQL database, YugabyteDB stores data differently than a stand-alone, monolithic  database. Because data is stored differently, YugabyteDB reads data differently as well.\n",
     "\n",
-    "In YugabyteDB with YSQL, you insert, update, delete, and read data from a database table.\n",
+    "YugabyteDB stores data in tables.\n",
     "\n",
     "A table consists of tablets. A tablet represents a table shard which contains a set of rows for the logical table. Under the hood, each tablet is a customized RocksDB instance. A tablet leader has a peer group known as tablet followers, and this group of tablet peers exists as a Raft consensus group. \n",
     "\n",
-    "In this lesson, using Explain Plans, built-in functions, and custom utilities, you will learn about how YugabyteDB stores data for a table, as table shards, known as tablets. You will also learn how YugabyteDB reads tablet data.\n",
+    "In this lab, using Explain Plans, built-in functions, and custom utilities, you will learn about how YugabyteDB stores data for a table, as table shards, known as tablets. You will also learn how YugabyteDB reads tablet data.\n",
     "\n",
     "\n",
     "## Requirements\n",
@@ -27,16 +27,12 @@
     "Run all the cells in this section:\n",
     "- Connect using Python and PostgreSQL driver\n",
     "- Load the SQL magic extension\n",
-    "- Create prepared statements for using utility metrics\n",
-    "  \n",
-    "The following cell requires:\n",
-    "- Python 3.7.9 and psycopg2\n",
-    "- Previous notebook variables"
+    "- Create prepared statements for using utility metrics\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,34 +72,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create prepared utility statements"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>fn_yb_create_stmts</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2022-07-14 21:02:48.055882-07:00</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(datetime.datetime(2022, 7, 14, 21, 2, 48, 55882, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=61200))),)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql /* prepare statements for util_metrics */\n",
-    "\n",
-    "-- deallocate stmt_util_metrics_snap_reset;\n",
-    "-- deallocate stmt_util_metrics_snap_table;\n",
-    "-- deallocate stmt_util_metrics_snap_tablet;\n",
-    "\n",
-    "prepare stmt_util_metrics_snap_reset as \n",
-    "select '' as \"ybwr metrics\" where fn_yb_tserver_metrics_snap() is null;\n",
-    "\n",
-    "prepare stmt_util_metrics_snap_table as\n",
-    "select row_name as \"[dbname | relname | tableid | tabletid | isLeader]\", rocksdb_number_db_seek, rocksdb_number_db_next, rows_inserted\n",
-    "from fn_yb_tserver_metrics_snap_table(0);\n",
-    "\n",
-    "prepare stmt_util_metrics_snap_tablet as \n",
-    "select * \n",
-    "from vw_yb_tserver_metrics_snap_and_show_tablet_load \n",
-    "where 1=1\n",
-    "and metric_name in ('rows_inserted','rocksdb_number_db_seek','rocksdb_number_db_next');\n",
-    "\n"
+    "%%sql \n",
+    "select fn_yb_create_stmts() ;"
    ]
   },
   {
@@ -116,13 +131,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "Done.\n",
+      "Done.\n",
+      "1000 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql /* create table no PK and insert rows */\n",
     "drop table if exists tbl_no_pk;\n",
@@ -163,25 +199,72 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: Do we support buffers?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "0 rows affected.\n",
+      "7 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>QUERY PLAN</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Seq Scan on public.tbl_no_pk (actual time=6.063..8.916 rows=1 loops=1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>&nbsp;&nbsp;Output: &#x27;&#x27;::text, k, v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>&nbsp;&nbsp;Filter: (tbl_no_pk.k = 1000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>&nbsp;&nbsp;Rows Removed by Filter: 999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Planning Time: 0.035 ms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Execution Time: 8.946 ms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Peak Memory Usage: 0 kB</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Seq Scan on public.tbl_no_pk (actual time=6.063..8.916 rows=1 loops=1)',),\n",
+       " (\"  Output: ''::text, k, v\",),\n",
+       " ('  Filter: (tbl_no_pk.k = 1000)',),\n",
+       " ('  Rows Removed by Filter: 999',),\n",
+       " ('Planning Time: 0.035 ms',),\n",
+       " ('Execution Time: 8.946 ms',),\n",
+       " ('Peak Memory Usage: 0 kB',)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql /* explain plan */\n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (analyze, buffers, costs off, verbose, timing on) \n",
+    "explain (analyze, costs off, verbose, timing on) \n",
     "select '' _\n",
     "    , k\n",
     "    , v\n",
@@ -212,13 +295,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>[dbname | relname | tableid | tabletid | isLeader]</th>\n",
+       "        <th>rocksdb_number_db_seek</th>\n",
+       "        <th>rocksdb_number_db_next</th>\n",
+       "        <th>rows_inserted</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>db_ybu | tbl_no_pk | 000040000000300080000000000045cd | 5ede8fcd0afa40488b8de7c30aea9603 | L</td>\n",
+       "        <td>1</td>\n",
+       "        <td>938</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>db_ybu | tbl_no_pk | 000040000000300080000000000045cd | ddec4f9f54d940e2937f2d20fb63a052 | L</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1064</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>db_ybu | tbl_no_pk | 000040000000300080000000000045cd | e84c0745259a444496e1309dddf5c8c6 | L</td>\n",
+       "        <td>1</td>\n",
+       "        <td>995</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('db_ybu | tbl_no_pk | 000040000000300080000000000045cd | 5ede8fcd0afa40488b8de7c30aea9603 | L', Decimal('1'), Decimal('938'), None),\n",
+       " ('db_ybu | tbl_no_pk | 000040000000300080000000000045cd | ddec4f9f54d940e2937f2d20fb63a052 | L', Decimal('1'), Decimal('1064'), None),\n",
+       " ('db_ybu | tbl_no_pk | 000040000000300080000000000045cd | e84c0745259a444496e1309dddf5c8c6 | L', Decimal('1'), Decimal('995'), None)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql /* metrics */\n",
     "execute stmt_util_metrics_snap_table;"
@@ -254,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tables and Tablets\n",
+    "### Tables and Tablets TODO Update for GitPod\n",
     "To better understand the Metrics report, you can view the tablets that processed the query in the output above in the YB-Master web ui.\n",
     "\n",
     "Each leader has a unique identifier, a tablet_id, which is the last value in the `row_name`, something like `7ef9496faf1045a0bf5002d50eac446`.\n",
