--- a/02_Tables_Tablets_and_Sharding.ipynb
+++ b/02_Tables_Tablets_and_Sharding.ipynb
@@ -80,7 +80,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(3,)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql \n",
+    "select count(*) from pg_prepared_statements where 1=1 and name in ('stmt_util_metrics_snap_tablet','stmt_util_metrics_snap_table','stmt_util_metrics_snap_reset')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -103,22 +146,22 @@
        "        <th>fn_yb_create_stmts</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>2022-07-14 21:02:48.055882-07:00</td>\n",
+       "        <td>2022-07-15 07:41:47.335399-07:00</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(datetime.datetime(2022, 7, 14, 21, 2, 48, 55882, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=61200))),)]"
+       "[(datetime.datetime(2022, 7, 15, 7, 41, 47, 335399, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=61200))),)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%sql \n",
-    "select fn_yb_create_stmts() ;"
+    "%%sql\n",
+    "select fn_yb_create_stmts();"
    ]
   },
   {
@@ -131,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -154,7 +197,7 @@
        "[]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,13 +215,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                 Table \"public.tbl_no_pk\"\n",
+      " Column |  Type   | Collation | Nullable | Default | Storage  | Stats target | Description \n",
+      "--------+---------+-----------+----------+---------+----------+--------------+-------------\n",
+      " k      | integer |           |          |         | plain    |              | \n",
+      " v      | text    |           |          |         | extended |              | \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" #\\d+\n",
     "YB_PATH=${1}\n",
@@ -200,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -224,7 +280,7 @@
        "        <th>QUERY PLAN</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Seq Scan on public.tbl_no_pk (actual time=6.063..8.916 rows=1 loops=1)</td>\n",
+       "        <td>Seq Scan on public.tbl_no_pk (actual time=3.069..8.775 rows=1 loops=1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>&nbsp;&nbsp;Output: &#x27;&#x27;::text, k, v</td>\n",
@@ -236,10 +292,10 @@
        "        <td>&nbsp;&nbsp;Rows Removed by Filter: 999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Planning Time: 0.035 ms</td>\n",
+       "        <td>Planning Time: 0.031 ms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Execution Time: 8.946 ms</td>\n",
+       "        <td>Execution Time: 8.802 ms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>Peak Memory Usage: 0 kB</td>\n",
@@ -247,16 +303,16 @@
        "</table>"
       ],
       "text/plain": [
-       "[('Seq Scan on public.tbl_no_pk (actual time=6.063..8.916 rows=1 loops=1)',),\n",
+       "[('Seq Scan on public.tbl_no_pk (actual time=3.069..8.775 rows=1 loops=1)',),\n",
        " (\"  Output: ''::text, k, v\",),\n",
        " ('  Filter: (tbl_no_pk.k = 1000)',),\n",
        " ('  Rows Removed by Filter: 999',),\n",
-       " ('Planning Time: 0.035 ms',),\n",
-       " ('Execution Time: 8.946 ms',),\n",
+       " ('Planning Time: 0.031 ms',),\n",
+       " ('Execution Time: 8.802 ms',),\n",
        " ('Peak Memory Usage: 0 kB',)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -321,32 +377,32 @@
        "        <th>rows_inserted</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>db_ybu | tbl_no_pk | 000040000000300080000000000045cd | 5ede8fcd0afa40488b8de7c30aea9603 | L</td>\n",
+       "        <td>db_ybu | tbl_no_pk | http://127.0.0.1:7000/table?id=00004000000030008000000000004830 | a5965b64fc344b839317e92d79cc80a0 | L</td>\n",
        "        <td>1</td>\n",
-       "        <td>938</td>\n",
+       "        <td>962</td>\n",
        "        <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>db_ybu | tbl_no_pk | 000040000000300080000000000045cd | ddec4f9f54d940e2937f2d20fb63a052 | L</td>\n",
+       "        <td>db_ybu | tbl_no_pk | http://127.0.0.2:7000/table?id=00004000000030008000000000004830 | 5356774bd212410ca35601ba9ce2e64a | L</td>\n",
        "        <td>1</td>\n",
-       "        <td>1064</td>\n",
+       "        <td>1034</td>\n",
        "        <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>db_ybu | tbl_no_pk | 000040000000300080000000000045cd | e84c0745259a444496e1309dddf5c8c6 | L</td>\n",
+       "        <td>db_ybu | tbl_no_pk | http://127.0.0.3:7000/table?id=00004000000030008000000000004830 | 4ecaa3d4cdc140d9a3f51244e60e171e | L</td>\n",
        "        <td>1</td>\n",
-       "        <td>995</td>\n",
+       "        <td>1001</td>\n",
        "        <td>None</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('db_ybu | tbl_no_pk | 000040000000300080000000000045cd | 5ede8fcd0afa40488b8de7c30aea9603 | L', Decimal('1'), Decimal('938'), None),\n",
-       " ('db_ybu | tbl_no_pk | 000040000000300080000000000045cd | ddec4f9f54d940e2937f2d20fb63a052 | L', Decimal('1'), Decimal('1064'), None),\n",
-       " ('db_ybu | tbl_no_pk | 000040000000300080000000000045cd | e84c0745259a444496e1309dddf5c8c6 | L', Decimal('1'), Decimal('995'), None)]"
+       "[('db_ybu | tbl_no_pk | http://127.0.0.1:7000/table?id=00004000000030008000000000004830 | a5965b64fc344b839317e92d79cc80a0 | L', Decimal('1'), Decimal('962'), None),\n",
+       " ('db_ybu | tbl_no_pk | http://127.0.0.2:7000/table?id=00004000000030008000000000004830 | 5356774bd212410ca35601ba9ce2e64a | L', Decimal('1'), Decimal('1034'), None),\n",
+       " ('db_ybu | tbl_no_pk | http://127.0.0.3:7000/table?id=00004000000030008000000000004830 | 4ecaa3d4cdc140d9a3f51244e60e171e | L', Decimal('1'), Decimal('1001'), None)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
